--- a/checkout.html
+++ b/checkout.html
@@ -24,14 +24,14 @@
   <div class="checkout-header">
     <div class="header-content">
       <div class="checkout-header-left-section">
-        <a href="amazon.html">
+        <a href="index.html">
           <img class="amazon-logo" src="images/amazon-logo.png">
           <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
         </a>
       </div>
 
       <div class="checkout-header-middle-section">
-        <a class="return-to-home-link" href="amazon.html">Checkout</a>
+        <a class="return-to-home-link" href="index.html">Checkout</a>
       </div>
 
       <div class="checkout-header-right-section">
